@@ -1,3 +1,7 @@
+1998-11-13  Tanaka Akira  <akr@jaist.ac.jp>
+
+	* pccl.el: Enclose mule depended process by `unless-broken'.
+
 1998-11-13  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
 
 	* poe.el (defun-maybe-cond): fixed problem in Emacs 18.
